Fix the cookie session validation

--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -195,7 +195,7 @@
       }
 
       universalMenus({
-        isLoggedIn: document.cookie.split("; ").includes("SESSaccesscisso=Operations"),
+        isLoggedIn: document.cookie.split("; ").includes("SESSaccesscisso=1"),
         loginUrl: "/user/login?destination=" + window.location.pathname,
         logoutUrl: logoutUrl,
         siteName: "Operations",
