Disabling the QA bot

--- a/b5_ac_conect/templates/layout/page.html.twig
+++ b/b5_ac_conect/templates/layout/page.html.twig
@@ -207,12 +207,12 @@
         target: document.getElementById("universal-menus")
       });
 
-      qaBot({
-        isLoggedIn: isLoggedIn,
-        loginUrl: loginUrl,
-        apiKey: "IkkHtNm3JQiQd45QkDrHrRs5A5UJkmu4cT_R5PYGDv4",
-        target: document.getElementById("qa-bot")
-      });
+      // qaBot({
+      //   isLoggedIn: isLoggedIn,
+      //   loginUrl: loginUrl,
+      //   apiKey: "IkkHtNm3JQiQd45QkDrHrRs5A5UJkmu4cT_R5PYGDv4",
+      //   target: document.getElementById("qa-bot")
+      // });
   }
 
   getToken(populateUniversalMenus);
